<resources>
    <string name="app_name">Uv_Eats</string>
    <string name="Label_User">apellido</string>
    <string name="Label_Password">Contraseña</string>
    <string name="Button_Login">Iniciar Sesión</string>
    <string name="User_Register">Registrar Usuario</string>
    <string name="Recover_Password">Recuperar Contraseña</string>
    <string name="InstructionsEmail">Ingrese su correo</string>
    <string name="SendCode">Enviar correo </string>
    <string name="Sign_In">Registrarse</string>
    <string name="InstructionsCode">Ingrese el codigo de validación</string>
    <string name="ValidateCode">Validar código</string>
    <string name="newPassword">Ingresa la nueva contraseña</string>
    <string name="RepeatPassword">Confirmar contraseña</string>
    <string name="SavePassword">Guardar contraseña</string>
    <string name="Products">Productos</string>
    <string name="Cart">Carrito</string>
    <string name="Record">Historial</string>
    <string name="Name">Nombre Completo</string>
    <string name="Email">Correo electrónico</string>
    <string name="Return">Regresar</string>
    <string name="TitleEmployee">Opciones de empleado</string>
    <string name="Product_Register">Registrar Producto</string>
    <string name="Category_Register">Registrar Categoria</string>
    <string name="Menu_Register">Registrar Menu</string>
    <string name="Edit_Product">Editar Producto</string>
    <string name="Edit_Category">Editar Categoria</string>
    <string name="Edit_Menu">Editar Menu</string>
    <string name="Consult_Products">Consultar Productos</string>
    <string name="Consult_Categories">Consultar Categorias</string>
    <string name="Consult_Menus">Consultar Menus</string>
    <string name="Category_Name">Nombre Categoria</string>
    <string name="Image">Imagen</string>
    <string name="Register">Registrar</string>
    <string name="NameData">Nombre</string>
    <string name="Description">Descripción</string>
    <string name="Price">Precio</string>
    <string name="Select_Category">Seleccionar Categoria</string>
    <string name="Edit">Editar</string>
    <string name="Menu">Menú</string>
    <string name="Add_Cart">Agregar al carrito</string>
    <string name="Order_Now">!ORDENA AHORA¡</string>
    <string name="Menu_Day">Platillo del dia</string>
    <string name="Amount">Cantidad:</string>
    <string name="Subtotal">Subtotal:</string>
    <string name="Continue_Pay">Proceder Pago</string>
    <string name="Cancel_Purchase">Cancelar Pedido</string>
    <string name="My_Orders">Mis Pedidos Realizados</string>
    <string name="Rate_now">Calificar Producto</string>
    <string name="Favorite_Product">Platillos Favoritos</string>
    <string name="Delete_Product">Eliminar Platillo</string>
    <string name="Buy_Again">Comprar nuevamente</string>
    <string name="Delete">Eliminar</string>
    <string name="Consult_Orders">Consultar Pedidos</string>
    <string name="Reply">Contestar</string>
    <string name="User_Options">Opciones de Usuario</string>
</resources>