<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.SignIn"
        android:paddingTop="16dp"
        android:layout_marginStart="25dp"
        android:orientation="vertical"
        android:layout_marginEnd="25dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/Name"
        />
    <EditText
        android:id="@+id/TextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:text="@string/Label_User"
        />
    <EditText
        android:id="@+id/TextUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:textSize="20dp"
        android:text="@string/Email"
        />
    <EditText
        android:id="@+id/TextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:padding="10dp"
        />
    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:textSize="20dp"
         android:text="@string/newPassword"
         />
    <EditText
         android:id="@+id/TextPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
         android:padding="10dp"
         />
    <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginTop="30dp"
          android:textSize="20dp"
          android:text="@string/RepeatPassword"
          />
    <EditText
          android:id="@+id/TextRepitPassword"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:inputType="text"
          android:padding="10dp"
          />
    <Button
        android:id="@+id/ButtonRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:text="@string/Sign_In"
        />
    <Button
        android:id="@+id/ButtonReturn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:padding="10dp"
        android:text="@string/Return"
        />
    </LinearLayout>
</layout>