<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="16dp"
        tools:context=".Activity.UserOptions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:layout_gravity="center"
            android:text="@string/User_Options"
            />

        <Button
            android:id="@+id/FavoriteProducts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Favorite_Product"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/ProceedPurchase"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Continue_Pay"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />

        <Button
            android:id="@+id/ConsultOrders"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Consult_Orders"
            android:textSize="20dp"
            android:layout_marginTop="20dp"
            />

    </LinearLayout>
</layout>