<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activity.CategoryRegister"
        android:padding="16dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="16dp"
            >
            <TextView
                android:id="@+id/TitleCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Edit_Category"
                android:textSize="30dp"
                android:gravity="center"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textSize="20dp"
                android:text="@string/Category_Name"
                />
            <EditText
                android:id="@+id/TextNameCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:padding="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:textSize="20dp"
                android:text="@string/Image"
                android:gravity="center"
                />
            <ImageView
                android:id="@+id/ImageCategory"
                android:layout_marginTop="16dp"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:src="@drawable/icon_camara"
                />

            <Button
                android:id="@+id/ButtonRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/Edit"
                />
        </LinearLayout>


    </RelativeLayout>

</layout>