<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login"
        android:paddingTop="16dp"
        >

    <ImageView
        android:id="@+id/Logo"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:src="@drawable/logologin"
        />
    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/Logo"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >
        <TextView
            android:id="@+id/User"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Label_User"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/TextUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:padding="10dp"
            />
        <TextView
            android:id="@+id/Password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Label_Password"
            android:textSize="20dp"
            android:textColor="@color/black"
            />
        <EditText
            android:id="@+id/TextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:padding="10dp"
            />
        <Button
            android:id="@+id/ButtonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/Button_Login"
            android:textColor="@color/white"
            android:background="@color/Blue"
            />

    </LinearLayout>


</RelativeLayout>
</layout>